--- a/src/view/CTThongKeAcc.form
+++ b/src/view/CTThongKeAcc.form
@@ -80,7 +80,7 @@
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="69" green="a8" id="Actions.Green" palette="3" red="59" type="palette"/>
+              <Color blue="ff" green="84" red="0" type="rgb"/>
             </Property>
           </Properties>
 
